deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qsk-deploy
spec:
  replicas: 5
  selector:
    matchLabels:
      project: qsk-book
  minReadySeconds: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        project: qsk-book
    spec:
      containers:
        - name: hello-pod
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          image: mahdimehrabi/qsk-book:v2
