pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: first-pod
  labels: 
    project: qsk-book
spec:
  containers:
    - name: qsk-book
      image: mahdimehrabi/qsk-book:v1
      ports:
        - containerPort: 8080
