svc-cloud.yml
apiVersion: v1
kind: Service
metadata:
  name: colud-lb
spec:
  type: LoadBalancer
  ports: 
    - port: 80
      targetPort: 8080
  selector:
    project: qsk-book
