svc-local1.yml
apiVersion: v1
kind: Service
metadata:
  name: local-np
spec:
  type: NodePort
  selector:
    project: qsk-book

  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 31111
