svc.yml
apiVersion: v1
kind: Service
metadata:
  name: first-service
spec:
  selector:
    project: qsk-book
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
