http_route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: first-httproute
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      name: gateway
      kind: Gateway
  hostnames:
    - first.mk8-cluster.linuz.ir
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: first-service
          port: 80
